// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextMessageDialog /> should render the actions 1`] = `
<BaseDialog
  actions={
    Array [
      Object {
        "action": [Function],
        "label": "fooAction",
      },
    ]
  }
  title="This is the title."
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={Object {}}
    role={null}
    string="This is the message."
  />
</BaseDialog>
`;

exports[`<TextMessageDialog /> should render with minimal props 1`] = `
<BaseDialog
  actions={Array []}
  title={null}
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={Object {}}
    role={null}
    string="This is the message."
  />
</BaseDialog>
`;

exports[`<TextMessageDialog /> should render with title and message 1`] = `
<BaseDialog
  actions={Array []}
  title="This is the title."
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={Object {}}
    role={null}
    string="This is the message."
  />
</BaseDialog>
`;

exports[`<TextMessageDialog /> should render with title, message and messageParams 1`] = `
<BaseDialog
  actions={Array []}
  title="This is the title."
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={
      Object {
        "name": "Placeholder",
      }
    }
    role={null}
    string="Message with {name}"
  />
</BaseDialog>
`;
